crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__antlr4rust_compat_reserved_accessors.snap
---
source: crates/antlr-rust-codegen/src/generator.rs
assertion_line: 19194
expression: rendered
---
    #[allow(non_snake_case)]
    pub fn item_all(&self) -> Vec<__Antlr4RustContext<ItemContext<'a>>> {
        self.0.item_children().map(__Antlr4RustContext).collect()
    }
    #[allow(non_snake_case)]
    pub fn text(&self) -> Option<__Antlr4RustContext<TextContext<'a>>> {
        self.0.text_rule_child().map(__Antlr4RustContext)
    }
    #[allow(non_snake_case)]
    pub fn required(&self) -> Option<__Antlr4RustContext<RequiredContext<'a>>> {
        self.0.required_rule_child().ok().map(__Antlr4RustContext)
    }
    #[allow(non_snake_case)]
    pub fn r#type(&self) -> Option<__Antlr4RustContext<TypeContext<'a>>> {
        self.0.type_rule_child().map(__Antlr4RustContext)
    }
    #[allow(non_snake_case)]
    pub fn self_(&self) -> Option<__Antlr4RustContext<SelfContext<'a>>> {
        self.0.self_rule_child().map(__Antlr4RustContext)
    }
    #[allow(non_snake_case)]
    pub fn ID(&self) -> Option<TerminalNode<'a>> {
        self.0.id_token().ok()
    }
    #[allow(non_snake_case)]
    pub fn IDS_all(&self) -> Vec<TerminalNode<'a>> {
        self.0.ids_tokens().collect()
    }
