crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__channel_and_mode_constants_dedupe_lossy_name_collisions.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: render_lexer_state_constants(&data)
---
pub const CHANNEL_DEFAULT_TOKEN_CHANNEL: i32 = 0;
pub const CHANNEL_FOO_BAR: i32 = 3;
pub const CHANNEL_FOO_BAR_2: i32 = 2;
pub const MODE_DEFAULT_MODE: i32 = 0;
pub const MODE_FOO_BAR: i32 = 2;
pub const MODE_FOO_BAR_2: i32 = 1;
