crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__compiles_plus_loop_back_with_adaptive_prediction.snap
---
source: crates/antlr-rust-codegen/src/generator.rs
assertion_line: 17763
expression: body.steps
---
[
    MatchToken {
        token_type: 1,
        follow_state: 3,
    },
    StarLoop {
        state: 4,
        decision: 0,
        enter_alt: 1,
        exit_alt: 2,
        track_alt_number: false,
        allow_semantic_context: false,
        force_context: false,
        plus_loop: true,
        fast_path: None,
        body: [
            MatchToken {
                token_type: 1,
                follow_state: 3,
            },
        ],
    },
]
