crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__compiles_star_loop_with_adaptive_prediction.snap
---
source: crates/antlr-rust-codegen/src/generator.rs
assertion_line: 17738
expression: body.steps
---
[
    StarLoop {
        state: 1,
        decision: 0,
        enter_alt: 1,
        exit_alt: 2,
        track_alt_number: true,
        allow_semantic_context: false,
        force_context: false,
        plus_loop: false,
        fast_path: None,
        body: [
            MatchToken {
                token_type: 1,
                follow_state: 4,
            },
        ],
    },
]
