crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__complete_ll1_dispatches.snap
---
source: crates/antlr-rust-codegen/src/generator.rs
assertion_line: 22006
expression: classification.complete_ll1_dispatches
---
{
    0: CompleteLl1Dispatch {
        fast_path: GeneratedDecisionFastPath {
            arms: [
                GeneratedDecisionFastArm {
                    alt: 1,
                    intervals: [
                        (
                            1,
                            1,
                        ),
                    ],
                },
                GeneratedDecisionFastArm {
                    alt: 2,
                    intervals: [
                        (
                            2,
                            2,
                        ),
                    ],
                },
            ],
        },
        default_alt: None,
    },
    1: CompleteLl1Dispatch {
        fast_path: GeneratedDecisionFastPath {
            arms: [
                GeneratedDecisionFastArm {
                    alt: 1,
                    intervals: [
                        (
                            1,
                            1,
                        ),
                    ],
                },
                GeneratedDecisionFastArm {
                    alt: 2,
                    intervals: [
                        (
                            -1,
                            -1,
                        ),
                    ],
                },
            ],
        },
        default_alt: None,
    },
    2: CompleteLl1Dispatch {
        fast_path: GeneratedDecisionFastPath {
            arms: [
                GeneratedDecisionFastArm {
                    alt: 1,
                    intervals: [
                        (
                            1,
                            1,
                        ),
                    ],
                },
                GeneratedDecisionFastArm {
                    alt: 2,
                    intervals: [
                        (
                            -1,
                            -1,
                        ),
                    ],
                },
            ],
        },
        default_alt: None,
    },
    3: CompleteLl1Dispatch {
        fast_path: GeneratedDecisionFastPath {
            arms: [
                GeneratedDecisionFastArm {
                    alt: 1,
                    intervals: [
                        (
                            1,
                            1,
                        ),
                    ],
                },
                GeneratedDecisionFastArm {
                    alt: 2,
                    intervals: [
                        (
                            -1,
                            -1,
                        ),
                    ],
                },
            ],
        },
        default_alt: None,
    },
    4: CompleteLl1Dispatch {
        fast_path: GeneratedDecisionFastPath {
            arms: [
                GeneratedDecisionFastArm {
                    alt: 1,
                    intervals: [
                        (
                            1,
                            1,
                        ),
                    ],
                },
                GeneratedDecisionFastArm {
                    alt: 2,
                    intervals: [
                        (
                            -1,
                            -1,
                        ),
                    ],
                },
            ],
        },
        default_alt: Some(
            2,
        ),
    },
    5: CompleteLl1Dispatch {
        fast_path: GeneratedDecisionFastPath {
            arms: [
                GeneratedDecisionFastArm {
                    alt: 1,
                    intervals: [
                        (
                            1,
                            1,
                        ),
                    ],
                },
                GeneratedDecisionFastArm {
                    alt: 2,
                    intervals: [
                        (
                            -1,
                            -1,
                        ),
                    ],
                },
            ],
        },
        default_alt: Some(
            2,
        ),
    },
    6: CompleteLl1Dispatch {
        fast_path: GeneratedDecisionFastPath {
            arms: [
                GeneratedDecisionFastArm {
                    alt: 1,
                    intervals: [
                        (
                            1,
                            1,
                        ),
                    ],
                },
                GeneratedDecisionFastArm {
                    alt: 2,
                    intervals: [
                        (
                            -1,
                            -1,
                        ),
                    ],
                },
            ],
        },
        default_alt: Some(
            2,
        ),
    },
}
